# openclaw-nutrition-skill

./: .gitignore  LICENSE  OPENCLAW_REVIEW.md  README.md  SKILL.md  pyproject.toml
data/: food_aliases.example.json  profile.example.json
oc_nutrition/: __init__.py  cli.py  export.py  image_analysis.py  models.py  storage.py  summaries.py
pydantic/: __init__.py
references/: data_model.md  logging_rules.md  privacy_security.md
scripts/: oc_nutrition_cli.py  validate_skill_policies.py
tests/: test_cli.py  test_export.py  test_image_analysis.py  test_storage.py  test_summaries.py
