[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openclaw-nutrition-skill"
version = "0.1.0"
description = "Local meal logging and macro summary toolkit for OpenClaw nutrition workflows"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "OpenClaw Nutrition Skill Contributors" }]
dependencies = [
  "typer>=0.12,<1.0",
  "pydantic>=2.6,<3.0",
  "python-dateutil>=2.9,<3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
]

[project.scripts]
oc-nutrition = "oc_nutrition.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
packages = ["oc_nutrition"]
