[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openclaw-nutrition-skill"
version = "0.1.0"
description = "OpenClaw nutrition skill specification and references"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "OpenClaw Nutrition Skill Contributors" }]

[tool.setuptools]
packages = []
